using stdout for testing

--- a/docker-image/fluent-bit.conf
+++ b/docker-image/fluent-bit.conf
@@ -15,7 +15,4 @@
     Match  kube.*
 
 [OUTPUT]
-    Name  es
-    Match *
-    Host  ${FLUENT_ELASTICSEARCH_HOST}
-    Port  ${FLUENT_ELASTICSEARCH_PORT}
+    Name  stdout
