--- a/docker-image/fluent-bit.conf
+++ b/docker-image/fluent-bit.conf
@@ -9,6 +9,7 @@
     Path   /var/log/containers/*.log
     Parser docker
     Tag    kube.*
+    Mem_Buf_Limit  10MB
 
 [FILTER]
     Name   kubernetes
