had to disable memory limits setting

--- a/fluent-bit-daemonset-elasticsearch-next.yaml
+++ b/fluent-bit-daemonset-elasticsearch-next.yaml
@@ -2,8 +2,8 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: fluent-bit
-  namespace: kube-system
   labels:
+    app: log-app
     k8s-app: fluent-bit-logging
     version: v1
     kubernetes.io/cluster-service: "true"
@@ -20,12 +20,12 @@ spec:
         image: fluent/fluent-bit-kubernetes-daemonset:0.11-next
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
-            value: "elasticsearch-logging"
+            value: "elasticsearch"
           - name:  FLUENT_ELASTICSEARCH_PORT
             value: "9200"
         resources:
-          limits:
-            memory: 100Mi
+          # limits:
+          #   memory: 100Mi
           requests:
             cpu: 100m
             memory: 100Mi
