--- a/fluent-bit-daemonset-kafka.yaml
+++ b/fluent-bit-daemonset-kafka.yaml
@@ -2,8 +2,8 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: fluent-bit
-  namespace: kube-system
   labels:
+    app: log-app
     k8s-app: fluent-bit-logging
     version: v1
     kubernetes.io/cluster-service: "true"
@@ -17,15 +17,10 @@ spec:
     spec:
       containers:
       - name: fluent-bit
-        image: fluent/fluent-bit-kubernetes-daemonset
-        env:
-          - name:  FLUENT_ELASTICSEARCH_HOST
-            value: "elasticsearch-logging"
-          - name:  FLUENT_ELASTICSEARCH_PORT
-            value: "9200"
+        image: leahnp/fb-kafka
         resources:
-          limits:
-            memory: 100Mi
+          # limits:
+          #   memory: 400Mi
           requests:
             cpu: 100m
             memory: 100Mi
